# portfolio-v2

./: Cargo.toml
portfolio-files/: portfolio.json
src/: main.rs
src/pages/: mod.rs  portfolio.rs
src/routes/: contact.rs  home.rs  mod.rs  portfolio.rs  update_portfolio.rs
templates/: contact.html  index.html  portfolio.html
