[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
tera = "1.20.0"
log = "0.4.22"
lazy_static = "1.5.0"
serde = { version = "1.0.203", features = ["derive"] }
ureq = "2.10.0"
serde_json = "1.0.120"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
unescape = "0.1.0"
descape = "1.1.2"
